[package]
name = "exam_service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"


[dependencies]
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
futures = "0.3"

[build-dependencies]
tonic-build = "0.12.3"
